# ChangeLog for net-irc/irssi
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.156 2010/01/03 15:08:27 swegener Exp $

  03 Jan 2010; Sven Wegener <swegener@gentoo.org> -irssi-0.8.13-r1.ebuild,
  -files/irssi-0.8.13-svn-5068.patch:
  Cleanup.

  22 Nov 2009; Sven Wegener <swegener@gentoo.org> irssi-0.8.14.ebuild:
  Switch ebuild to EAPI-2.

  18 Nov 2009; Brent Baude <ranger@gentoo.org> irssi-0.8.14.ebuild:
  Marking irssi-0.8.14 ppc64 for bug 287273

  15 Nov 2009; Raúl Porcel <armin76@gentoo.org> irssi-0.8.14.ebuild:
  arm/ia64/s390/sh stable wrt #287273

  11 Nov 2009; Tiago Cunha <tcunha@gentoo.org> irssi-0.8.14.ebuild:
  stable sparc, bug 287273

  01 Nov 2009; nixnut <nixnut@gentoo.org> irssi-0.8.14.ebuild:
  ppc stable #287273

  25 Oct 2009; Markus Meier <maekke@gentoo.org> irssi-0.8.14.ebuild:
  amd64/x86 stable, bug #287273

  22 Oct 2009; Tobias Klausmann <klausman@gentoo.org> irssi-0.8.14.ebuild:
  Stable on alpha, bug #287273

  21 Oct 2009; Jeroen Roovers <jer@gentoo.org> irssi-0.8.14.ebuild:
  Stable for HPPA (bug #287273).

  09 Sep 2009; Sven Wegener <swegener@gentoo.org> -irssi-0.8.12.ebuild,
  -files/irssi-0.8.12-svn-4612.patch, -files/irssi-0.8.12-svn-4627.patch,
  -files/irssi-0.8.12-svn-4637.patch, -files/irssi-0.8.12-svn-4640.patch,
  -files/irssi-0.8.12-svn-4829.patch, -irssi-0.8.13.ebuild:
  Cleanup. Dropped mips stable keyword, no stable support, bug #271875.

*irssi-0.8.14 (28 Jul 2009)

  28 Jul 2009; Sven Wegener <swegener@gentoo.org> +irssi-0.8.14.ebuild:
  Version bump.

  07 Jun 2009; nixnut <nixnut@gentoo.org> irssi-0.8.13-r1.ebuild:
  ppc stable #271875

  02 Jun 2009; Jeroen Roovers <jer@gentoo.org> irssi-0.8.13-r1.ebuild:
  Stable for HPPA (bug #271875).

  01 Jun 2009; Raúl Porcel <armin76@gentoo.org> irssi-0.8.13-r1.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable wrt #271875
