@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/irssi
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.156 2010/01/03 15:08:27 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.157 2010/03/22 20:16:58 swegener Exp $
+
+*irssi-0.8.15_rc1 (22 Mar 2010)
+
+  22 Mar 2010; Sven Wegener <swegener@gentoo.org> +irssi-0.8.15_rc1.ebuild:
+  Version bump.
 
   03 Jan 2010; Sven Wegener <swegener@gentoo.org> -irssi-0.8.13-r1.ebuild,
   -files/irssi-0.8.13-svn-5068.patch:
